src/test/ui/generic-associated-types/issue-79422-pass.stderr
error[E0271]: type mismatch resolving `for<'a> <BTreeMap<u8, u8> as MapLike<u8, u8>>::VRefCont<'a> == (dyn RefCont<'_, u8> + 'static)`
  --> $DIR/issue-79422-pass.rs:42:13
   |
LL |     let m = Box::new(std::collections::BTreeMap::<u8, u8>::new())
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected trait object `dyn RefCont`, found reference
   |
   = note: expected trait object `(dyn RefCont<'_, u8> + 'static)`
                 found reference `&u8`
   = note: required for the cast to the object type `dyn MapLike<u8, u8, for<'a> VRefCont = (dyn RefCont<'_, u8> + 'static)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
